--- a/View/login.html
+++ b/View/login.html
@@ -3,15 +3,18 @@
     <head>
         <title>ACCESSO</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap">
-        <link rel="stylesheet" href="logregstyle.css">
         <link href="font.css" rel="stylesheet">
+        <link rel="stylesheet" href="logregstyle.css">
     </head>
-    <body>
-        <form method="post" action="login.php">
-            <h1>ACCESSO</h1>
-            <input type="text" id="email" placeholder="Email" name="email">
-            <input type="password" id="Password" placeholder="Password" name="password">
-            <button type="submit" name="login">ACCEDI</button>
+    <body style="background-color: #9fc2fa;">
+        <form method="post" action="login.php" style="width: 600px;height: 250px;">
+            <h1 style="font-size: 34px;">ACCESSO</h1>
+            <label style="font-style: 'Open Sans', sans-serif;font-size: 16px;font-weight: bold;">Email</label>
+            <input type="text" id="email" name="email">
+            <label style="font-style: 'Open Sans', sans-serif;font-size: 16px;font-weight: bold;">Password</label>
+            <input type="password" id="Password" name="password">
+            <br>
+            <button type="submit" name="login" style="width: 100px;">ACCEDI</button>
         </form>
     </body>
 </html>
