--- a/View/register.html
+++ b/View/register.html
@@ -3,22 +3,31 @@
     <head>
         <title>REGISTRAZIONE</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap">
-        <link rel="stylesheet" href="logregstyle.css">
         <link href="font.css" rel="stylesheet">
+        <link rel="stylesheet" href="logregstyle.css">
     </head>
-    <body>
-        <form method="post" action="register.php">
-            <h1>REGISTRAZIONE</h1>
-            <input type="text" id="nome" placeholder="Nome" name="nome" required>
-            <input type="text" id="cognome" placeholder="Cognome" name="cognome" required>
-            <input type="text" id="email" placeholder="E-mail" name="email" required>
-            <input type="text" id="codicefiscale" placeholder="Codice Fiscale" name="codicefiscale" required>
-            <input type="date" id="datanascita" placeholder="Data di Nascita" name="datanascita" required>
-            <input type="text" id="luogonascita" placeholder="Luogo di Nascita" name="luogonascita" required>
-            <input type="text" id="residenza" placeholder="Residenza" name="residenza" required>
-            <input type="text" id="numerotelefono" placeholder="Telefono/Cellulare" name="numerotelefono" required>
-            <input type="password" id="password" placeholder="Password" name="password" required>
-            <button type="submit" name="register">REGISTRATI</button>
+    <body style="background-color: #9fc2fa;">
+        <form method="post" action="register.php" style="width: 600px;">
+            <h1 style="font-size: 34px;">REGISTRAZIONE</h1>
+            <label style="font-style: 'Open Sans', sans-serif;font-size: 16px;font-weight: bold;">Nome</label>
+            <input type="text" id="nome" name="nome" required>
+            <label style="font-style: 'Open Sans', sans-serif;font-size: 16px;font-weight: bold;">Cognome</label>
+            <input type="text" id="cognome" name="cognome" required>
+            <label style="font-style: 'Open Sans', sans-serif;font-size: 16px;font-weight: bold;">Email</label>
+            <input type="text" id="email" name="email" required>
+            <label style="font-style: 'Open Sans', sans-serif;font-size: 16px;font-weight: bold;">Codice Fiscale</label>
+            <input type="text" id="codicefiscale" name="codicefiscale" required>
+            <label style="font-style: 'Open Sans', sans-serif;font-size: 16px;font-weight: bold;">Data di nascita</label>
+            <input type="date" id="datanascita" name="datanascita" required>
+            <label style="font-style: 'Open Sans', sans-serif;font-size: 16px;font-weight: bold;">Luogo di nascita</label>
+            <input type="text" id="luogonascita" name="luogonascita" required>
+            <label style="font-style: 'Open Sans', sans-serif;font-size: 16px;font-weight: bold;">Residenza</label>
+            <input type="text" id="residenza" name="residenza" required>
+            <label style="font-style: 'Open Sans', sans-serif;font-size: 16px;font-weight: bold;">Numero di telefono</label>
+            <input type="text" id="numerotelefono" name="numerotelefono" required>
+            <label style="font-style: 'Open Sans', sans-serif;font-size: 16px;font-weight: bold;">Password</label>
+            <input type="password" id="password" name="password" required>
+            <button type="submit" name="register" style="width: 100px;">REGISTRATI</button>
         </form>
     </body>
 </html>
