--- a/View/registeradmin.html
+++ b/View/registeradmin.html
@@ -3,18 +3,21 @@
     <head>
         <title>REGISTRAZIONE</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap">
-        <link rel="stylesheet" href="logregstyle.css">
         <link href="font.css" rel="stylesheet">
+        <link rel="stylesheet" href="logregstyle.css">
     </head>
-    <body>
-        <form method="post" action="registeradmin.php">
-            <h1>REGISTRAZIONE</h1>
-            <input type="text" id="nome" placeholder="Nome" name="nome" required>
-            <input type="text" id="cognome" placeholder="Cognome" name="cognome" required>
-            <input type="text" id="email" placeholder="E-mail" name="email" required>
-            <input type="password" id="password" placeholder="Password" name="password" required>
-            <!--<input type="file" id="imgprofilo" placeholder="Immagine Profilo" name="imgprofilo" >-->
-            <button type="submit" name="register">REGISTRATI</button>
+    <body style="background-color: #9fc2fa;">
+        <form method="post" action="registeradmin.php" style="width: 600px;">
+            <h1 style="font-size: 34px;">REGISTRAZIONE</h1>
+            <label style="font-style: 'Open Sans', sans-serif;font-size: 16px;font-weight: bold;">Nome</label>
+            <input type="text" id="nome" name="nome" required>
+            <label style="font-style: 'Open Sans', sans-serif;font-size: 16px;font-weight: bold;">Cognome</label>
+            <input type="text" id="cognome" name="cognome" required>
+            <label style="font-style: 'Open Sans', sans-serif;font-size: 16px;font-weight: bold;">Email</label>
+            <input type="text" id="email" name="email" required>
+            <label style="font-style: 'Open Sans', sans-serif;font-size: 16px;font-weight: bold;">Password</label>
+            <input type="password" id="password" name="password" required>
+            <button type="submit" name="register" style="width: 100px;">REGISTRATI</button>
         </form>
     </body>
 </html>
