--- a/View/provacalendario2.html
+++ b/View/provacalendario2.html
@@ -3,184 +3,399 @@
 
 <head>
     <style type="text/css">
-        .Tabella {border:1px; border-color: grey; background-color: transparent;}
-        .tabella { border:none;}
-        .tabellai { border:none; cursor: pointer;}
-        .giorno { font-weight: bold; color: grey;}
-        body { background:transparent; }
-        a {
-        font-size: 14px; 
-        background-color: #ffffff; 
-        text-decoration: none;}
-        a:visited,active,link {
-        background-color: #a6c6f7; 
-        text-decoration: none;}
-        a:hover {
-        background-color: #a6c6f7;
-        text-decoration: none;
-        }
+        @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100;200;300;400;500;600;700&display=swap');
+
+:root {
+    --calendar-bg-color: #262829;
+    --calendar-font-color: #FFF;
+    --weekdays-border-bottom-color: #404040;
+    --calendar-date-hover-color: #505050;
+    --calendar-current-date-color: #1b1f21;
+    --calendar-today-color: linear-gradient(to bottom, #03a9f4, #2196f3);
+    --calendar-today-innerborder-color: transparent;
+    --calendar-nextprev-bg-color: transparent;
+    --next-prev-arrow-color : #FFF;
+    --calendar-border-radius: 16px;
+    --calendar-prevnext-date-color: #484848
+}
+
+* {
+    padding: 0;
+    margin: 0;
+}
+
+.calendar {
+    font-family: 'IBM Plex Sans', sans-serif;
+    position: relative;
+    max-width: 400px; /*change as per your design need */
+    min-width: 320px;
+    background: var(--calendar-bg-color);
+    color: var(--calendar-font-color);
+    margin: 20px auto;
+    box-sizing: border-box;
+    overflow: hidden;
+    font-weight: normal;
+    border-radius: var(--calendar-border-radius);
+}
+
+.calendar-inner {
+    padding: 10px 10px;
+}
+
+.calendar .calendar-inner .calendar-body {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    text-align: center;
+}
+
+.calendar .calendar-inner .calendar-body div {
+    padding: 4px;
+    min-height: 30px;
+    line-height: 30px;
+    border: 1px solid transparent;
+    margin: 10px 2px 0px;
+}
+
+.calendar .calendar-inner .calendar-body div:nth-child(-n+7) {
+    border: 1px solid transparent;
+    border-bottom: 1px solid var(--weekdays-border-bottom-color);
+}
+
+.calendar .calendar-inner .calendar-body div:nth-child(-n+7):hover {
+    border: 1px solid transparent;
+    border-bottom: 1px solid var(--weekdays-border-bottom-color);
+}
+
+.calendar .calendar-inner .calendar-body div>a {
+    color: var(--calendar-font-color);
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+}
+
+.calendar .calendar-inner .calendar-body div:hover {
+    border: 1px solid var(--calendar-date-hover-color);
+    border-radius: 4px;
+}
+
+.calendar .calendar-inner .calendar-body div.empty-dates:hover {
+    border: 1px solid transparent;
+}
+
+.calendar .calendar-inner .calendar-controls {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.calendar .calendar-inner .calendar-today-date {
+    display: grid;
+    text-align: center;
+    cursor: pointer;
+    margin: 3px 0px;
+    background: var(--calendar-current-date-color);
+    padding: 8px 0px;
+    border-radius: 10px;
+    width: 80%;
+    margin: auto;
+}
+
+.calendar .calendar-inner .calendar-controls .calendar-year-month {
+    display: flex;
+    min-width: 100px;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.calendar .calendar-inner .calendar-controls .calendar-next {
+    text-align: right;
+}
+
+.calendar .calendar-inner .calendar-controls .calendar-year-month .calendar-year-label,
+.calendar .calendar-inner .calendar-controls .calendar-year-month .calendar-month-label {
+    font-weight: 500;
+    font-size: 20px;
+}
+
+.calendar .calendar-inner .calendar-body .calendar-today {
+    background: var(--calendar-today-color);
+    border-radius: 4px;
+}
+
+.calendar .calendar-inner .calendar-body .calendar-today:hover {
+    border: 1px solid transparent;
+}
+
+.calendar .calendar-inner .calendar-body .calendar-today a {
+    outline: 2px solid var(--calendar-today-innerborder-color);
+}
+
+.calendar .calendar-inner .calendar-controls .calendar-next a,
+.calendar .calendar-inner .calendar-controls .calendar-prev a {
+    color: var(--calendar-font-color);
+    font-family: arial, consolas, sans-serif;
+    font-size: 26px;
+    text-decoration: none;
+    padding: 4px 12px;
+    display: inline-block;
+    background: var(--calendar-nextprev-bg-color);
+    margin: 10px 0 10px 0;
+}
+
+.calendar .calendar-inner .calendar-controls .calendar-next a svg,
+.calendar .calendar-inner .calendar-controls .calendar-prev a svg {
+    height: 20px;
+    width: 20px;
+}
+
+.calendar .calendar-inner .calendar-controls .calendar-next a svg path,
+.calendar .calendar-inner .calendar-controls .calendar-prev a svg path{
+    fill: var(--next-prev-arrow-color);
+}
+
+.calendar .calendar-inner .calendar-body .prev-dates,
+.calendar .calendar-inner .calendar-body .next-dates {
+    color: var(--calendar-prevnext-date-color);
+}
+
+.calendar .calendar-inner .calendar-body .prev-dates:hover,
+.calendar .calendar-inner .calendar-body .next-dates:hover {
+  border: 1px solid transparent;
+  pointer-events: none;
+}
         </style>
 </head>
 
 <body >
-
-  <div id="calendar"></div>
-
+    <form method="get" action="provacalendario2.html">
+        <div class="calendar"></div>
+    </form>
   <script>
-    var d= new Date();
-    var giorno=d.getDate();
-    var mese=d.getMonth();
-    var anno=d.getFullYear();
-    var Mese=new Array();
-    Mese[1]="Gennaio";
-    Mese[2]="Febbraio";
-    Mese[3]="Marzo";
-    Mese[4]="Aprile";
-    Mese[5]="Maggio";
-    Mese[6]="Giugno";
-    Mese[7]="Luglio";
-    Mese[8]="Agosto";
-    Mese[9]="Settembre";
-    Mese[10]="Ottobre";
-    Mese[11]="Novembre";
-    Mese[12]="Dicembre";
-    function mese1()
-{
-    mese-=1;
-    if((mese+1)==0)
-    {
-        anno-=1; mese=11;
-        document.getElementById("anno").innerHTML='<b Onclick="anno1()">&lt;</b>          '+anno+'          <b OnClick="anno2()">&gt;</b>';
-    }
-    document.getElementById("mese").innerHTML='<b OnClick="mese1()">&lt;</b>          '+Mese[mese+1]+'          <b OnClick="mese2()">&gt;</b>';
-    giorni();
-}
+    //check the console for date click event
+//Fixed day highlight
+//Added previous month and next month view
 
-function mese2()
-{
-    mese+=1;
-    if((mese+1)==13)
-    {
-        anno+=1; mese=0;
-        document.getElementById("anno").innerHTML='<b Onclick="anno1()">&lt;</b>          '+anno+'          <b OnClick="anno2()">&gt;</b>';
-    }
-    document.getElementById("mese").innerHTML='<b OnClick="mese1()">&lt;          </b>'+Mese[mese+1]+'<b OnClick="mese2()">     &gt;</b>';
-    giorni();
-}
-
-function anno1()
-{
-    anno-=1;
-    document.getElementById("anno").innerHTML='<b Onclick="anno1()">&lt;</b>          '+anno+'          <b OnClick="anno2()">&gt;</b>';
-    giorni();
-}
-
-function anno2()
-{
-    anno+=1;
-    document.getElementById("anno").innerHTML='<b Onclick="anno1()">&lt;</b>          '+anno+'          <b OnClick="anno2()">&gt;</b>';
-    giorni();
-}
-  </script>
-  <table>
-    <tr>
-    <td id="anno"><b Onclick="anno1()">&lt;</b>          <script type="text/javascript">document.write(anno);</script>          <b OnClick="anno2()">&gt;</b></td>
-    <td style="width: 50px;"></td>
-    <td id="mese"><b OnClick="mese1()">&lt;</b>          <script type="text/javascript">document.write(Mese[mese+1]);</script>     <b OnClick="mese2()">&gt;</b></td>
-    </tr></table>
-    <table onMouseover="changeto('#a6c6f7')" onMouseout="changeback('#000000')">
-    <tr>
-    <td></td>
-    <td>Lun</td>
-    <td>Mar</td>
-    <td>Mer</td>
-    <td>Gio</td>
-    <td>Ven</td>
-    <td>Sab</td>
-    <td>Dom</td>
-    </tr>
-    <tr>
-    <td></td>
-    <td id="1">1</td>
-    <td id="2">2</td>
-    <td id="3">3</td>
-    <td id="4">4</td>
-    <td id="5">5</td>
-    <td id="6">6</td>
-    <td id="7">7</td>
-    </tr>
-    <tr>
-    <td></td>
-    <td id="8">8</td>
-    <td id="9">9</td>
-    <td id="10">10</td>
-    <td id="11">11</td>
-    <td id="12">12</td>
-    <td id="13">13</td>
-    <td id="14">14</td>
-    </tr>
-    <tr>
-        <td></td>
-        <td id="15">15</td>
-        <td id="16">16</td>
-        <td id="17">17</td>
-        <td id="18">18</td>
-        <td id="19">19</td>
-        <td id="20">20</td>
-        <td id="21">21</td>
-        </tr>
-        <tr>
-        <td></td>
-        <td id="22">22</td>
-        <td id="23">23</td>
-        <td id="24">24</td>
-        <td id="25">25</td>
-        <td id="26">26</td>
-        <td id="27">27</td>
-        <td id="28">28</td>
-        </tr>
-        <tr id="giorni">
-        <td></td>
-        <td id="29">29</td>
-        <td id="30">30</td>
-        <td id="31">31</td>
-        <td id="32"></td>
-        <td id="33"></td>
-        <td id="34"></td>
-        <td id="35"></td>
-        </tr>
-        <tr id="giorni2">
-        <td></td>
-        <td id="36"></td>
-        <td id="37"></td>
-        <td id="38"></td>
-        </tr>
-        <script type="text/javascript">
-            function giorni()
-            {
-                var y=new Date(anno, mese+1);
-                var giorni_mese=new Date(anno, mese+1, 0).getDate();
-                for (var i=1; i<38; i++)
-                {
-                    document.getElementById(i).innerHTML='';
-                    document.getElementById(i).className='';
-                }
-                var newd=new Date(anno, mese+2);
-                var mm=new Date().getMonth()+1;
-                for(var i=1; i<giorni_mese+1; i++)
-                {
-                    var day=newd.getDay()+i+1;
-                    document.getElementById(day).innerHTML=i;
-                    if(y.getMonth() == mm)
-                    {
-                        if(day==d.getDate()){document.getElementById(day+4).className="giorno";}
-                    }
-                }
+function CalendarControl() {
+    const calendar = new Date();
+    const calendarControl = {
+      localDate: new Date(),
+      prevMonthLastDate: null,
+      calWeekDays: ["Sun", "Mon", "Tue", "Wed", "Thu", "Fri", "Sat"],
+      calMonthName: [
+        "Jan",
+        "Feb",
+        "Mar",
+        "Apr",
+        "May",
+        "Jun",
+        "Jul",
+        "Aug",
+        "Sep",
+        "Oct",
+        "Nov",
+        "Dec"
+      ],
+      daysInMonth: function (month, year) {
+        return new Date(year, month, 0).getDate();
+      },
+      firstDay: function () {
+        return new Date(calendar.getFullYear(), calendar.getMonth(), 1);
+      },
+      lastDay: function () {
+        return new Date(calendar.getFullYear(), calendar.getMonth() + 1, 0);
+      },
+      firstDayNumber: function () {
+        return calendarControl.firstDay().getDay() + 1;
+      },
+      lastDayNumber: function () {
+        return calendarControl.lastDay().getDay() + 1;
+      },
+      getPreviousMonthLastDate: function () {
+        let lastDate = new Date(
+          calendar.getFullYear(),
+          calendar.getMonth(),
+          0
+        ).getDate();
+        return lastDate;
+      },
+      navigateToPreviousMonth: function () {
+        calendar.setMonth(calendar.getMonth() - 1);
+        calendarControl.attachEventsOnNextPrev();
+      },
+      navigateToNextMonth: function () {
+        calendar.setMonth(calendar.getMonth() + 1);
+        calendarControl.attachEventsOnNextPrev();
+      },
+      navigateToCurrentMonth: function () {
+        let currentMonth = calendarControl.localDate.getMonth();
+        let currentYear = calendarControl.localDate.getFullYear();
+        calendar.setMonth(currentMonth);
+        calendar.setYear(currentYear);
+        calendarControl.attachEventsOnNextPrev();
+      },
+      displayYear: function () {
+        let yearLabel = document.querySelector(".calendar .calendar-year-label");
+        yearLabel.innerHTML = calendar.getFullYear();
+      },
+      displayMonth: function () {
+        let monthLabel = document.querySelector(
+          ".calendar .calendar-month-label"
+        );
+        monthLabel.innerHTML = calendarControl.calMonthName[calendar.getMonth()];
+      },
+      selectDate: function (e) {
+        console.log(
+          `${e.target.textContent} ${
+            calendarControl.calMonthName[calendar.getMonth()]
+          } ${calendar.getFullYear()}`
+        );
+      },
+      plotSelectors: function () {
+        document.querySelector(
+          ".calendar"
+        ).innerHTML += `<div class="calendar-inner"><div class="calendar-controls">
+          <div class="calendar-prev"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="128" height="128" viewBox="0 0 128 128"><path fill="#666" d="M88.2 3.8L35.8 56.23 28 64l7.8 7.78 52.4 52.4 9.78-7.76L45.58 64l52.4-52.4z"/></svg></a></div>
+          <div class="calendar-year-month">
+          <div class="calendar-month-label"></div>
+          <div>-</div>
+          <div class="calendar-year-label"></div>
+          </div>
+          <div class="calendar-next"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="128" height="128" viewBox="0 0 128 128"><path fill="#666" d="M38.8 124.2l52.4-52.42L99 64l-7.77-7.78-52.4-52.4-9.8 7.77L81.44 64 29 116.42z"/></svg></a></div>
+          </div>
+          <div class="calendar-today-date">Today: 
+            ${calendarControl.calWeekDays[calendarControl.localDate.getDay()]}, 
+            ${calendarControl.localDate.getDate()}, 
+            ${calendarControl.calMonthName[calendarControl.localDate.getMonth()]} 
+            ${calendarControl.localDate.getFullYear()}
+          </div>
+          <div class="calendar-body"></div></div>`;
+      },
+      plotDayNames: function () {
+        for (let i = 0; i < calendarControl.calWeekDays.length; i++) {
+          document.querySelector(
+            ".calendar .calendar-body"
+          ).innerHTML += `<div>${calendarControl.calWeekDays[i]}</div>`;
+        }
+      },
+      plotDates: function () {
+        document.querySelector(".calendar .calendar-body").innerHTML = "";
+        calendarControl.plotDayNames();
+        calendarControl.displayMonth();
+        calendarControl.displayYear();
+        let count = 1;
+        let prevDateCount = 0;
+  
+        calendarControl.prevMonthLastDate = calendarControl.getPreviousMonthLastDate();
+        let prevMonthDatesArray = [];
+        let calendarDays = calendarControl.daysInMonth(
+          calendar.getMonth() + 1,
+          calendar.getFullYear()
+        );
+        // dates of current month
+        for (let i = 1; i < calendarDays; i++) {
+          if (i < calendarControl.firstDayNumber()) {
+            prevDateCount += 1;
+            document.querySelector(
+              ".calendar .calendar-body"
+            ).innerHTML += `<div class="prev-dates"></div>`;
+            prevMonthDatesArray.push(calendarControl.prevMonthLastDate--);
+          } else {
+            document.querySelector(
+              ".calendar .calendar-body"
+            ).innerHTML += `<div class="number-item" data-num=${count}><a class="dateNumber" href="`+window.location.href+`+\${count}\+`+calendar.getMonth()+`+\+`+calendar.getFullYear()+`">${count++}</a></div>`;
+          }
+        }
+        //remaining dates after month dates
+        for (let j = 0; j < prevDateCount + 1; j++) {
+          document.querySelector(
+            ".calendar .calendar-body"
+          ).innerHTML += `<div class="number-item" data-num=${count}><a class="dateNumber" href="`+window.location.href+`">${count++}</a></div>`;
+        }
+        calendarControl.highlightToday();
+        calendarControl.plotPrevMonthDates(prevMonthDatesArray);
+        calendarControl.plotNextMonthDates();
+      },
+      attachEvents: function () {
+        let prevBtn = document.querySelector(".calendar .calendar-prev a");
+        let nextBtn = document.querySelector(".calendar .calendar-next a");
+        let todayDate = document.querySelector(".calendar .calendar-today-date");
+        let dateNumber = document.querySelectorAll(".calendar .dateNumber");
+        prevBtn.addEventListener(
+          "click",
+          calendarControl.navigateToPreviousMonth
+        );
+        nextBtn.addEventListener("click", calendarControl.navigateToNextMonth);
+        todayDate.addEventListener(
+          "click",
+          calendarControl.navigateToCurrentMonth
+        );
+        for (var i = 0; i < dateNumber.length; i++) {
+            dateNumber[i].addEventListener(
+              "click",
+              calendarControl.selectDate,
+              false
+            );
+        }
+      },
+      highlightToday: function () {
+        let currentMonth = calendarControl.localDate.getMonth() + 1;
+        let changedMonth = calendar.getMonth() + 1;
+        let currentYear = calendarControl.localDate.getFullYear();
+        let changedYear = calendar.getFullYear();
+        if (
+          currentYear === changedYear &&
+          currentMonth === changedMonth &&
+          document.querySelectorAll(".number-item")
+        ) {
+          document
+            .querySelectorAll(".number-item")
+            [calendar.getDate() - 1].classList.add("calendar-today");
+        }
+      },
+      plotPrevMonthDates: function(dates){
+        dates.reverse();
+        for(let i=0;i<dates.length;i++) {
+            if(document.querySelectorAll(".prev-dates")) {
+                document.querySelectorAll(".prev-dates")[i].textContent = dates[i];
             }
-            giorni();
-            
-            </script>
-            </table>
+        }
+      },
+      plotNextMonthDates: function(){
+       let childElemCount = document.querySelector('.calendar-body').childElementCount;
+       //7 lines
+       if(childElemCount > 42 ) {
+           let diff = 49 - childElemCount;
+           calendarControl.loopThroughNextDays(diff);
+       }
+
+       //6 lines
+       if(childElemCount > 35 && childElemCount <= 42 ) {
+        let diff = 42 - childElemCount;
+        calendarControl.loopThroughNextDays(42 - childElemCount);
+       }
+
+      },
+      loopThroughNextDays: function(count) {
+        if(count > 0) {
+            for(let i=1;i<=count;i++) {
+                document.querySelector('.calendar-body').innerHTML += `<div class="next-dates">${i}</div>`;
+            }
+        }
+      },
+      attachEventsOnNextPrev: function () {
+        calendarControl.plotDates();
+        calendarControl.attachEvents();
+      },
+      init: function () {
+        calendarControl.plotSelectors();
+        calendarControl.plotDates();
+        calendarControl.attachEvents();
+      }
+    };
+    calendarControl.init();
+  }
+  
+  const calendarControl = new CalendarControl();
+  </script>
 
 </body>
 </html>
