--- a/View/provacalendario2.html
+++ b/View/provacalendario2.html
@@ -301,14 +301,14 @@ function CalendarControl() {
           } else {
             document.querySelector(
               ".calendar .calendar-body"
-            ).innerHTML += `<div class="number-item" data-num=${count}><a class="dateNumber" href="`+window.location.href+`+\${count}\+`+calendar.getMonth()+`+\+`+calendar.getFullYear()+`">${count++}</a></div>`;
+            ).innerHTML += `<div class="number-item" data-num=${count}><a class="dateNumber" href="`+window.location.href+'/'+count+'/'+calendar.getMonth()+'/'+calendar.getFullYear()+`">${count++}</a></div>`;
           }
         }
         //remaining dates after month dates
         for (let j = 0; j < prevDateCount + 1; j++) {
           document.querySelector(
             ".calendar .calendar-body"
-          ).innerHTML += `<div class="number-item" data-num=${count}><a class="dateNumber" href="`+window.location.href+`">${count++}</a></div>`;
+          ).innerHTML += `<div class="number-item" data-num=${count}><a class="dateNumber" href="`+window.location.href+'/'+count+'/'+calendar.getMonth()+'/'+calendar.getFullYear()+`">${count++}</a></div>`;
         }
         calendarControl.highlightToday();
         calendarControl.plotPrevMonthDates(prevMonthDatesArray);
