--- a/View/provacalendario2.html
+++ b/View/provacalendario2.html
@@ -290,7 +290,7 @@ function CalendarControl() {
           calendar.getMonth() + 1,
           calendar.getFullYear()
         );
-        // dates of current month
+        // data mese corrente
         for (let i = 1; i < calendarDays; i++) {
           if (i < calendarControl.firstDayNumber()) {
             prevDateCount += 1;
