modifiche alle index

--- a/View/indexadmin.html
+++ b/View/indexadmin.html
@@ -103,18 +103,22 @@ https://templatemo.com/tm-566-medic-care
                         <h5 class="mb-lg-4 mb-3">ORARI DI APERTURA</h5>
 
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item d-flex">
-                                DOMENICA : CHIUSO
-                            </li>
 
                             <li class="list-group-item d-flex">
                                 LUNEDI' - MARTEDI' - VENERDI'
-                                <span>8:00 - 15:30</span>
+                                <span>8:00 - 14:00</span>
+                            </li>
+                            <li class="list-group-item d-flex">
+                                MARTEDI' - GIOVEDI'
+                                <span>8:00 - 17:00</span>
                             </li>
 
                             <li class="list-group-item d-flex">
                                 SABATO
-                                <span>10:30 - 17:30</span>
+                                <span>10:30 - 13:30</span>
+                            </li>
+                            <li class="list-group-item d-flex">
+                                DOMENICA : CHIUSO
                             </li>
                         </ul>
                     </div>
