aggiunta file per modifica dati e password, cambio dei profili e ulteriori ritocchi

--- a/View/inseriscireferto.html
+++ b/View/inseriscireferto.html
@@ -26,8 +26,9 @@
 
         <link href="css/templatemo-medic-care.css" rel="stylesheet">
         
-        <link href="casimedico.css" rel="stylesheet">
         <link href="font.css" rel="stylesheet">
+
+        <link href="casimedico.css" rel="stylesheet">
 
 <!--
 
@@ -106,15 +107,18 @@ https://templatemo.com/tm-566-medic-care
                     <br><br>
                     <form action="#">
                             <h3><label for="oggetto">Oggetto Referto: </label>
-                            <input id="oggetto" name="oggetto" placeholder="Oggetto" style="width: 800px;height: 35px;"/></h3>
+                            <input type="text" id="oggetto" name="oggetto" style="width: 800px;height: 35px;"/></h3>
                             <br><h3><label for="contenuto">Contenuto Referto:</label>
-                            <input id="contenuto" name="contenuto" placeholder="Scrivi qua" style="width: 800px;height: 170px;"></h3>
-                            <br><br><br><br>
+                            <input type="text" id="contenuto" name="contenuto" style="width: 800px;height: 170px;"></h3>
+                            <br><br>
+                            <h3><label for="fileref">File Referto: </label>
+                            <input id="fileref" name="fileref" style="width: 800px;" type="file"></h3>
+                            <br><br>
                             <div style="position: absolute;left: 550px;">
                                 <button type="submit" class="btn btn-primary" style="width: 140px;height: 35px;">Annulla</button>
                                 &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
                                 <button type="submit" class="btn btn-primary" style="width: 140px;height: 35px;">Conferma</button>
-                                </div>
+                            </div>
 
                     </form>
                 </div>
