--- a/View/modifica_dati_paziente.html
+++ b/View/modifica_dati_paziente.html
@@ -29,27 +29,27 @@
         
     </head>
     <body style="background-color: #9fc2fa;">
-        <form method="post" action="register.php" style="width: 600px;">
-            <h1 style="font-size: 34px;">REGISTRAZIONE</h1>
-            <label style="font-style: 'Open Sans', sans-serif;font-size: 16px;font-weight: bold;">Nome</label>
-            <input type="text" id="nome" name="nome" required>
+        <form method="post" action="modifica_dati_paziente.php" style="width: 600px;">
+            <h1 style="font-size: 34px;">MODIFICA DATI</h1>
+            <!--<label style="font-style: 'Open Sans', sans-serif;font-size: 16px;font-weight: bold;">Nome</label>
+            <input type="text" id="nome" name="nome">
             <label style="font-style: 'Open Sans', sans-serif;font-size: 16px;font-weight: bold;">Cognome</label>
-            <input type="text" id="cognome" name="cognome" required>
+            <input type="text" id="cognome" name="cognome" >-->
             <label style="font-style: 'Open Sans', sans-serif;font-size: 16px;font-weight: bold;">Email</label>
-            <input type="text" id="email" name="email" required>
-            <label style="font-style: 'Open Sans', sans-serif;font-size: 16px;font-weight: bold;">Codice Fiscale</label>
-            <input type="text" id="codicefiscale" name="codicefiscale" required>
+            <input type="text" id="email" name="email" >
+            <!--<label style="font-style: 'Open Sans', sans-serif;font-size: 16px;font-weight: bold;">Codice Fiscale</label>
+            <input type="text" id="codicefiscale" name="codicefiscale" >
             <label style="font-style: 'Open Sans', sans-serif;font-size: 16px;font-weight: bold;">Data di nascita</label>
-            <input type="date" id="datanascita" name="datanascita" required>
+            <input type="date" id="datanascita" name="datanascita" >
             <label style="font-style: 'Open Sans', sans-serif;font-size: 16px;font-weight: bold;">Luogo di nascita</label>
-            <input type="text" id="luogonascita" name="luogonascita" required>
+            <input type="text" id="luogonascita" name="luogonascita" >-->
             <label style="font-style: 'Open Sans', sans-serif;font-size: 16px;font-weight: bold;">Residenza</label>
-            <input type="text" id="residenza" name="residenza" required>
+            <input type="text" id="residenza" name="residenza" >
             <label style="font-style: 'Open Sans', sans-serif;font-size: 16px;font-weight: bold;">Numero di telefono</label>
-            <input type="text" id="numerotelefono" name="numerotelefono" required>
-            <label style="font-style: 'Open Sans', sans-serif;font-size: 16px;font-weight: bold;">Password</label>
-            <input type="password" id="password" name="password" required>
-            <button type="submit" name="register" style="width: 100px;">REGISTRATI</button>
+            <input type="text" id="numerotelefono" name="numerotelefono" >
+            <!--<label style="font-style: 'Open Sans', sans-serif;font-size: 16px;font-weight: bold;">Password</label>
+            <input type="password" id="password" name="password" >-->
+            <button type="submit" name="register" style="width: 100px;">MODIFICA</button>
         </form>
         <script src="js/jquery.min.js"></script>
         <script src="js/bootstrap.bundle.min.js"></script>
