--- a/View/logregstyle.css
+++ b/View/logregstyle.css
@@ -1,5 +1,5 @@
-html,body {
-    /*background: url('images/gallery/pexels-shvetsa-4167561.jpg');*/
+/*html,body {
+    background: url('images/gallery/pexels-shvetsa-4167561.jpg');
     background-repeat: no-repeat;
     background-position: 0 0;
     background-size: 200px 50px cover;
@@ -10,7 +10,7 @@ html,body {
     font-size: 14px;
     font-style: 'Open sans', sans-serif;
     color: #333;
-}
+}*/
 /*@media only screen and (max-width: 767px) {
     body {
     background-image: url('images/gallery/pexels-shvetsa-4167561.jpg');
