--- a/View/modifica_dati_admin.html
+++ b/View/modifica_dati_admin.html
@@ -29,14 +29,17 @@
         
     </head>
     <body style="background-color: #9fc2fa;">
-        <form method="post" action="loginmedico.php" style="width: 600px;">
-            <h1 style="font-size: 34px;">ACCESSO</h1>
+        <form method="post" action="modifica_dati_admin.php" style="width: 600px;">
+            <h1 style="font-size: 34px;">MODIFICA DATI</h1>
+            <!--<label style="font-style: 'Open Sans', sans-serif;font-size: 16px;font-weight: bold;">Nome</label>
+            <input type="text" id="nome" name="nome" >
+            <label style="font-style: 'Open Sans', sans-serif;font-size: 16px;font-weight: bold;">Cognome</label>
+            <input type="text" id="cognome" name="cognome" >-->
             <label style="font-style: 'Open Sans', sans-serif;font-size: 16px;font-weight: bold;">Email</label>
-            <input type="text" id="email" name="email">
-            <label style="font-style: 'Open Sans', sans-serif;font-size: 16px;font-weight: bold;">Password</label>
-            <input type="password" id="Password" name="password">
-            <br>
-            <button type="submit" name="login" style="width: 100px;">ACCEDI</button>
+            <input type="text" id="email" name="email" >
+            <!--<label style="font-style: 'Open Sans', sans-serif;font-size: 16px;font-weight: bold;">Password</label>
+            <input type="password" id="password" name="password" >-->
+            <button type="submit" name="register" style="width: 100px;">MODIFICA</button>
         </form>
         <script src="js/jquery.min.js"></script>
         <script src="js/bootstrap.bundle.min.js"></script>
