--- a/View/registermedico.html
+++ b/View/registermedico.html
@@ -1,10 +1,32 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
     <head>
-        <title>REGISTRAZIONE</title>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <title>Ambula Care</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+
+        <link href="css/bootstrap-icons.css" rel="stylesheet">
+
+        <link href="css/owl.carousel.min.css" rel="stylesheet">
+
+        <link href="css/owl.theme.default.min.css" rel="stylesheet">
+
+        <link href="css/templatemo-medic-care.css" rel="stylesheet">
+
         <link href="font.css" rel="stylesheet">
+
         <link rel="stylesheet" href="logregstyle.css">
+        
     </head>
     <body style="background-color: #9fc2fa;">
         <form method="post" action="registermedico.php" style="width: 600px;">
@@ -23,5 +45,10 @@
             <input type="file" id="imgprofilo" name="imgprofilo" style="background-color: white;">
             <button type="submit" name="register" style="width: 100px;">REGISTRATI</button>
         </form>
+        <script src="js/jquery.min.js"></script>
+        <script src="js/bootstrap.bundle.min.js"></script>
+        <script src="js/owl.carousel.min.js"></script>
+        <script src="js/scrollspy.min.js"></script>
+        <script src="js/custom.js"></script>
     </body>
 </html>
