--- a/View/rispostarecensione_profilomedico.html
+++ b/View/rispostarecensione_profilomedico.html
@@ -106,10 +106,10 @@ https://templatemo.com/tm-566-medic-care
                     <form action="#">
                         <div class="form-group"></div>
                             <h3><label for="oggetto">Oggetto Risposta: </label>
-                            <input id="oggetto" name="oggetto" placeholder="Oggetto" style="width: 800px;height: 35px;">
+                            <input id="oggetto" name="oggetto" style="width: 800px;height: 35px;">
                             <br><br><label for="contenuto">Contenuto Risposta:</label>
-                            <input id="contenuto" name="contenuto" placeholder="Scrivi qua" style="width: 800px;height: 170px;"></h3>
-                            <br><br><br><br><br>
+                            <input id="contenuto" name="contenuto" style="width: 800px;height: 170px;"></h3>
+                            <br><br>
                             <div style="position: absolute;left: 550px;">
                                 <button type="submit" class="btn btn-primary" style="width: 140px;height: 35px;">Annulla</button>
                                 &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
